# pypto

./: CMakeLists.txt
.claude/: CLAUDE.md
.claude/rules/: first-principles.md
.claude/skills/fix-issue/: SKILL.md
.claude/skills/fix-pr/: SKILL.md
.claude/skills/git-commit/: SKILL.md
.claude/skills/github-pr/: SKILL.md
.github/workflows/: ci.yml
docs/en/dev/codegen/: 00-pto_codegen.md  02-orchestration_codegen.md
docs/en/dev/ir/: 05-operators.md
docs/en/dev/language/: 00-python_syntax.md
docs/en/dev/passes/: 00-pass_manager.md  01-unroll_loops.md  04-split_chunked_loops.md  99-verifier.md
docs/en/reference/pto-isa/: 02-buffer_management.md
docs/en/user/: 00-getting_started.md  01-language_guide.md
docs/zh-cn/dev/codegen/: 00-pto_codegen.md  02-orchestration_codegen.md
docs/zh-cn/dev/ir/: 05-operators.md
docs/zh-cn/dev/language/: 00-python_syntax.md
docs/zh-cn/dev/passes/: 00-pass_manager.md  01-unroll_loops.md  04-split_chunked_loops.md  99-verifier.md
docs/zh-cn/reference/pto-isa/: 02-buffer_management.md
docs/zh-cn/user/: 00-getting_started.md  01-language_guide.md
examples/ir_parser/: batch_paged_attention_example.py  orchestration_example.py  paged_attention_example.py  vector_example_dag.py
examples/language/beginner/: basic_ops.py  elementwise.py  hello_world.py  matmul.py
examples/language/llm_models/: llama_7b_mini.py
include/pypto/ir/transforms/: ir_property.h
include/pypto/ir/transforms/base/: mutator.h
include/pypto/ir/verifier/: verification_error.h  verifier.h
python/bindings/modules/: passes.cpp
python/pypto/ir/: builder.py  compile.py  pass_manager.py  pto_codegen.py
python/pypto/ir/op/: system_ops.py  tile_ops.py
python/pypto/language/: __init__.py
python/pypto/language/op/: system_ops.py
python/pypto/language/parser/: ast_parser.py  decorator.py
python/pypto/pypto_core/: passes.pyi
python/pypto/runtime/: runner.py
src/backend/910B_PTO/: backend_910b_pto_ops.cpp
src/codegen/orchestration/: orchestration_codegen.cpp
src/ir/: op_registry.cpp
src/ir/op/sync_ops/: cross_core.cpp
src/ir/op/tile_ops/: transform.cpp
src/ir/transforms/: allocate_memory_addr_pass.cpp  convert_tensor_to_tile_ops_pass.cpp  ctrl_flow_transform_pass.cpp  ir_property.cpp  mutator.cpp  op_conversion_registry.cpp  unroll_loops_pass.cpp
src/ir/verifier/: property_verifier_registry.cpp  verify_use_after_def.cpp
tests/st/: README.md
tests/st/codegen/: test_batch_paged_attention.py  test_paged_attention.py
tests/st/harness/core/: harness.py
tests/st/runtime/: test_ctrl_flow.py  test_dynamic_shape.py  test_elementwise_nd.py  test_fillpad.py  test_matmul.py
tests/ut/codegen/: test_orchestration_codegen.py  test_pto_codegen.py  test_pto_codegen_cross_core.py
tests/ut/ir/memory/: test_memref.py
tests/ut/ir/operators/: test_tile_ops.py
tests/ut/ir/statements/: test_for_stmt.py  test_while_stmt.py
tests/ut/ir/transforms/: test_basic_memory_reuse.py  test_convert_tensor_to_tile_ops.py  test_ctrl_flow_transform.py  test_insert_sync.py  test_interchange_chunk_loops.py  test_legalize_pto_buffer_reuse.py  test_pass_manager.py  test_python_printer.py  test_split_chunked_loops.py  test_verify_ssa_pass.py  test_verify_use_after_def.py
tests/ut/language/parser/: test_error_cases.py
